--- a/backend/config/database.yml
+++ b/backend/config/database.yml
@@ -88,6 +88,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
+    url: <%= ENV["DATABASE_URL"] %>
     database: backend_production
     username: backend
     password: <%= ENV["BACKEND_DATABASE_PASSWORD"] %>
